--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "aurelia-animator-css": "^1.0.4",
     "aurelia-bootstrapper": "^2.2.0",
-    "aurelia-dialog": "^1.0.0-rc.2.0.0",
+    "aurelia-dialog": "^1.0.0",
     "aurelia-http-client": "^1.3.0",
     "aurelia-polyfills": "^1.3.0",
     "aurelia-validation": "^1.2.2",
