--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "bluebird": "^3.5.1",
     "bootstrap": "^4.1.1",
     "font-awesome": "^4.7.0",
-    "nprogress": "^0.2.0"
+    "nprogress": "^0.2.0",
+    "toastr": "^2.1.4"
   },
   "peerDependencies": {},
   "devDependencies": {
