--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "aurelia-bootstrapper": "^2.2.0",
     "aurelia-dialog": "^1.0.0",
     "aurelia-http-client": "^1.3.0",
+    "aurelia-plugins-pagination": "^2.6.1",
     "aurelia-polyfills": "^1.3.0",
     "aurelia-validation": "^1.2.2",
+    "babel-polyfill": "^6.26.0",
     "bluebird": "^3.5.1",
     "bootstrap": "^4.1.1",
     "font-awesome": "^4.7.0",
